<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8171616"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/freedomtech">
        </ImageView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/bannerfreedomtech">
        </ImageView>

        <LinearLayout
            android:layout_width="337dp"
            android:layout_height="350dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rectangulo_transparente"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/inicio_sesion_textview"
                android:textColor="#FFFFFF"
                android:textSize="24dp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/editTextUsuario"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nombre_usuario"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:inputType="text" />
            <EditText
                android:id="@+id/editTextContrasena"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/contrasena_edittext"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.9"
                android:background="@drawable/rectangulo_redondo"
                android:textStyle="bold"
                android:textColor="#000000"
                android:onClick="Inicio"
                android:text="@string/login_button" />
            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.9"
                android:background="#00F3F1F1"
                android:textColor="#FFFFFF"
                android:onClick="Registro"
                android:textStyle="bold"
                android:text="@string/register_button" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>