<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8171616"
    tools:context=".AcercaDeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/freedomtech">

        </ImageView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/bannerfreedomtech"
            >

        </ImageView>


        <LinearLayout
            android:layout_width="337dp"
            android:layout_height="330dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rectangulo_transparente"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/acerca_de"
                android:textColor="#FFFFFF"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonInfo"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.9"
                android:background="#00F3F1F1"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:onClick="Sobre"
                android:text="@string/acerca_de_freedomtech" />

            <Button
                android:id="@+id/buttonVersion"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.9"
                android:background="#00F3F1F1"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:onClick="Version"
                android:text="@string/version_app" />

            <Button
                android:id="@+id/buttonTerminos"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.9"
                android:background="#00F3F1F1"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:onClick="Terminos"
                android:text="@string/terminos" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>