<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8171616"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/freedomtech">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rectangulo_transparente"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">


            <Button
                android:id="@+id/buttonCrear"
                android:layout_width="270dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/rectangulo_redondo"
                android:drawableLeft="@drawable/ic_presupuesto_escribir"
                android:text="@string/crear_button"
                android:onClick="CrearPresupuesto"
                android:textColor="#000000"
                android:textStyle="bold">

            </Button>

            <Button
                android:id="@+id/buttonVer"
                android:layout_width="270dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/rectangulo_redondo"
                android:drawableLeft="@drawable/ic_presupuesto_ver"
                android:text="@string/ver_button"
                android:onClick="VerPresupuesto"
                android:textColor="#000000"
                android:textStyle="bold">

            </Button>

            <Button
                android:id="@+id/buttonBorrar"
                android:layout_width="270dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:background="@drawable/rectangulo_redondo"
                android:drawableLeft="@drawable/ic_presupuesto_borrar"
                android:text="@string/borrar_button"
                android:onClick="BorrarPresupuesto"
                android:textColor="#000000"
                android:textStyle="bold">

            </Button>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>