<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mylist">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:text="@string/nombre_usuario"
                    tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
                <TextView
                    android:id="@+id/usuario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
            </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/email_edittext"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
            <TextView
                android:id="@+id/correo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/contrasena_edittext"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
            <TextView
                android:id="@+id/contrasena"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
        </TableRow>

        </TableLayout>
    </LinearLayout>
</LinearLayout>